--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -10,48 +10,69 @@ body {
   }
 }
 
-.navbarSettings {
-  padding: 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-content: space-between;
-  .search-favourite-navbar {
+@media (max-width: 767px) {
+  display {
+    display: none;
+  }
+
+  .navbarSettings {
+    padding: 0.5rem;
     display: flex;
+    justify-content: center;
     align-items: center;
-    div {
-      border: 1px solid black;
-      margin-right: 1rem;
-      border-radius: 10px;
-      background-color: #363636;
-    }
-    form {
+    justify-content: space-between;
+    .search-favourite-navbar {
       display: flex;
       align-items: center;
-      padding: 5px;
-      margin-right: 10px;
-      input {
-        :focus {
-          border: none;
-        }
+      div {
+        border: 1px solid black;
+        margin-right: 1rem;
+        border-radius: 10px;
         background-color: #363636;
-        border: none;
-        outline: none;
-        color: grey;
       }
-      border: none;
-      i {
-        font-size: 1rem;
-        color: grey;
-        margin-right: 0.4rem;
+      form {
+        display: flex;
+        align-items: center;
+        padding: 5px;
+        margin-right: 10px;
+        input {
+          :focus {
+            border: none;
+          }
+          background-color: #363636;
+          border: none;
+          outline: none;
+          color: grey;
+        }
+        border: none;
+        i {
+          font-size: 1rem;
+          color: grey;
+          margin-right: 0.4rem;
+        }
       }
     }
+    #searchInput {
+      padding: 5px;
+    }
+    i {
+      font-size: 1.4rem;
+      color: white;
+    }
   }
-  #searchInput {
-    padding: 5px;
-  }
-  i {
-    font-size: 1.4rem;
-    color: white;
+
+  .downNavbar-mobile-container {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    margin-bottom: 1rem;
+    .downNavbar-mobile {
+      margin-top: 1rem;
+      color: white;
+      display: flex;
+      justify-content: center;
+      justify-content: space-around;
+      font-size: 1.5rem;
+    }
   }
 }
